Validaciones completadas para la validación del registro

--- a/Desktop_App/src/desktop_app/LogIn.form
+++ b/Desktop_App/src/desktop_app/LogIn.form
@@ -20,17 +20,19 @@
                       <Component id="jLabel6" alignment="1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                      <Group type="102" attributes="0">
-                          <Component id="jb_registrar_registro" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="56" max="32767" attributes="0"/>
-                          <Component id="jb_regresar_registro" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Component id="jb_registrar_registro" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace pref="56" max="32767" attributes="0"/>
+                              <Component id="jb_regresar_registro" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="tf_nombres_registrar" alignment="0" max="32767" attributes="0"/>
+                          <Component id="tf_apellidos_registrar" alignment="0" max="32767" attributes="0"/>
+                          <Component id="tf_username_registrar" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jp_contrasena_registro" alignment="0" min="-2" pref="169" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="tf_nombres_registrar" alignment="0" max="32767" attributes="0"/>
-                      <Component id="tf_apellidos_registrar" alignment="0" max="32767" attributes="0"/>
-                      <Component id="tf_Confirmar_contrasena_registrar" alignment="0" pref="210" max="32767" attributes="0"/>
-                      <Component id="tf_contrasena_registrar" alignment="0" max="32767" attributes="0"/>
-                      <Component id="tf_username_registrar" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jp_contrasenaConfirm_registro" min="-2" pref="169" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="177" max="32767" attributes="0"/>
               </Group>
@@ -57,12 +59,12 @@
                   <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="tf_contrasena_registrar" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jp_contrasena_registro" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="27" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="tf_Confirmar_contrasena_registrar" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jp_contrasenaConfirm_registro" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -117,14 +119,14 @@
         </Component>
         <Component class="javax.swing.JTextField" name="tf_username_registrar">
         </Component>
-        <Component class="javax.swing.JTextField" name="tf_contrasena_registrar">
-        </Component>
         <Component class="javax.swing.JLabel" name="jLabel9">
           <Properties>
             <Property name="text" type="java.lang.String" value="Confirmar Contrase&#xf1;a"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="tf_Confirmar_contrasena_registrar">
+        <Component class="javax.swing.JPasswordField" name="jp_contrasena_registro">
+        </Component>
+        <Component class="javax.swing.JPasswordField" name="jp_contrasenaConfirm_registro">
         </Component>
       </SubComponents>
     </Container>
