validación de inicio de sesión terminada

--- a/Desktop_App/src/desktop_app/LogIn.form
+++ b/Desktop_App/src/desktop_app/LogIn.form
@@ -480,8 +480,8 @@
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="tf_login_username" max="32767" attributes="0"/>
-                          <Component id="tf_login_password" pref="140" max="32767" attributes="0"/>
+                          <Component id="tf_login_username" pref="140" max="32767" attributes="0"/>
+                          <Component id="jp_contrasena_login" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -506,7 +506,7 @@
               <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="tf_login_password" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jp_contrasena_login" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="81" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -531,8 +531,6 @@
     </Component>
     <Component class="javax.swing.JTextField" name="tf_login_username">
     </Component>
-    <Component class="javax.swing.JTextField" name="tf_login_password">
-    </Component>
     <Component class="javax.swing.JButton" name="jb_login_iniciarS">
       <Properties>
         <Property name="text" type="java.lang.String" value="Iniciar Sesi&#xf3;n"/>
@@ -548,6 +546,8 @@
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jb_login_registrarseMouseClicked"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JPasswordField" name="jp_contrasena_login">
     </Component>
   </SubComponents>
 </Form>
